--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="/style.css" />
         <script src="/lodash/lodash.js"></script>
         <script src="/jquery/dist/jquery.js"></script>
+        <script src="/tone/build/Tone.js"></script>
         <script src="/bootstrap/dist/js/bootstrap.js"></script>
         <script src="/angular/angular.js"></script>
         <script src="/angular-ui-router/release/angular-ui-router.js"></script>
