Added Tone.js dependency.

--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -11,6 +11,7 @@
         <script src="/angular/angular.js"></script>
         <script src="/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="/socket.io-client/socket.io.js"></script>
+        <script src="/tone/build/Tone.js"></script>
         <script src="/main.js"></script>
     </head>
     <body ng-app="FullstackGeneratedApp">
