--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -4,6 +4,7 @@
         <base href="/" />
         <title>Fullstack Academy Generated Application</title>
         <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="/style.css" />
         <script src="/lodash/lodash.js"></script>
         <script src="/jquery/dist/jquery.js"></script>
