UI cleaned up after merge.

--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -11,4 +11,15 @@
   .pull-right {
   	margin-left: 5px;
   }
+  .slider {
+    position: relative;
+    top: 10px;
+  }
+  .row {
+    margin-bottom: 10px;
+  }
+  .well-settings {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
