Further UI improvements.

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -13,7 +13,6 @@
 	position: block;
 	width:100%;
 	margin:0 auto;
-	padding:10px;
 	.pad-row {
 		height:110px;
 		width:100%;
@@ -25,7 +24,7 @@
 			border:2px solid black;
 			height: 100px;
 			border-radius: 10px;
-			margin-left:1%;
+			margin-right:1%;
 		}
 	}
 
